Changelog for GEMC
==================

3/9/17
 - added beagle open file in primary generator for ascii
 - stopping run manager if no more events in the LUND or BEAGLE format
 - if:

   * gemc in in batch mode;
   * N is not set explicitely;
   * an external input file is used

   Then gemc will run through all the events in the input file.


3/7/17
 - added linear interpolation for dipole fields
 - building CAD and GDML volumes before G4Physical Volumes so we can make copies of them

3/1/17
 - fixed G4LogicalBorderSurface instantiation. This caused incorrect mirror behavior for "border" type mirrors

2/24/17
 - added surface area, volume and mass information in the detector log if verbosity is high enough
 - added surface area, volume and mass information in the detector gui tab

2/22/17
 - added option ION_P:
   Option ION_P: Primary particle is an ion. Sets Z, A and Charge State of the primary particle. Setting the charge state is optional.

   - Example 1: -ION_P="6 12" sets the Z to 6, A to 12. Charge will be Z.
   - Example 2: -ION_P="6 12 4" sets the Z to 6, A to 12, and charge to 4.
   - Notice: BEAM_P still sets the particle momentum, and its type must be GenericIon. For example:

     -BEAM_P="GenericIon, 4*GeV, 90*deg, 0*deg"


2/21/17
 - added ionInelastic process
 - if one uses the /gun/particle /gun/ion command then we make sure not to overwrite those values

2/20/17
 - added mode 10 and 20 to FASTMC, enabling hit process routines

2/16/17
 - Added vacuumOpt material - vacuum with optical property. Addressing issue #64.
 - fixed qt quit slot, needed to delete runManager

2/15/17
 - identifying missing hit process by volume name
 - for CAD models, if hitType is not specified, using sensitivity
 - added momemntum information for FASTMC mode (unsmeared)
 - for FASTMC mode 2, forcing recording of 0 edep particles
 - for FASTMC mode, do not digitize the info
 - for FASTMC mode, do not process RF