@@ -1,6 +1,10 @@
 Changelog for GEMC
 ==================
 
+3/10/17
+ - routine to set generated particle from input file more general
+ - reading beagle format
+
 3/9/17
  - added beagle open file in primary generator for ascii
  - stopping run manager if no more events in the LUND or BEAGLE format
